tests/fixtures/positive/architecture/package-naming-convention-drift/src/main/kotlin/com/example/feature/foo/PackageNamingConventionDrift.kt
package com.example.other.location

class PackageNamingConventionDrift
