tests/fixtures/negative/architecture/package-naming-convention-drift/src/main/kotlin/com/example/feature/foo/PackageNamingConventionDrift.kt
package com.example.feature.foo.ui

class PackageNamingConventionDrift
